2.1.0
Fixed pages marked erroneously as dirty when doinf multi file find/replace.
Fixed setting toolbar/menus sensitive after doing find/replace.
Added custom root theme.
Fixed enabling save after redoall/undoall.
Added reload theme to tab->theme context menu.
Fixed enabling save after redo/undo.
Added custom spring theme.
Added custom grey theme.
Added custom winter theme.
Added custom wood theme.
If theme is invalid use the inbuilt default light theme.
Added search path for user themes ( ie ~/.KKEditQT/themes ).
Added custom XMas theme.
Redone theme combo in prefs.
Switch tabs when right clicking tab for context menu.
Added syntax hilighting menu to tab context menu.
Fixed document wrongly marked dirty.
Fixed open as hexdump.
Set mime type to plain/text if undetermined.
Removed toolkit plugins.
Removed src plugins.
Updated buildplugs script.
Removed qt_highlighter files.
Started moving to KSyntaxHighlighting library ( why re-invent the wheel! ).

2.0.1
Better detection of what is a non-printable char.
Fixed opening C include files.
Fixed occasional lockup when opening two or more files from file manager if one or more is an executable script.
Don't open files containing non-printable chars.
Add libmagic dep.
Redone term plug settings.
Added post load want to plugins.

2.0.0
Redone term plug settings.
Fixed segfault when closing open file dialog from wm.
Removed unneeded prefs from term plug.
Fixed term plug open file with spaces.
Term plug scroll bar can now be dragged/scrolled with left button.
Added back/fore colours to terminal plug settings.
Fixed not showing completions.
Removed unneeded terminal plugin menu items.
Moved from using 3rd party qtermwidget to xterm.
Fixed trying to go foward with nothing to go forward to.
Fixed importing from PDF.
Fixed replacing text when running external tool.
Fixed 'Open in src file' in doc viewer.
Fixed occasional crash when repeatedly restoring sessions with large files >~4000.
Fixed segfault when saving session.